kubernetes/platform/database/02-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: tcp-postgres
  selector:
    app: postgres
  clusterIP: None # Headless Service (Dato curioso para entrevista: permite DNS directo al pod)
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres-db"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        tier: database # Importante para la Network Policy
      annotations:
        sidecar.istio.io/inject: "false"        
    spec:
      containers:
      - name: postgres
        image: postgres:13-alpine
        ports:
        - containerPort: 5432
          name: tcp-postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: init-script
        configMap:
          name: postgres-init-script
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
