kubernetes/platform/database/03-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-access-control
  namespace: finops-bank
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {} # <--- This empty bracket means "Allow ALL pods in this namespace"
    ports:
    - protocol: TCP
      port: 5432
