kubernetes/platform/database/04-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {} # Selecciona TODOS los pods
  policyTypes:
  - Ingress
  # No hay reglas "ingress", por lo tanto, bloquea todo.
